# secondhand_shop

./: .gitignore  Cargo.toml  app2.js  et --hard 9546803491fbe5da201eba6942906878c5f98344  localhost+2-key.pem  localhost+2.pem  save  save.rs  tailwind.config.js  todo
migrations/: 20250429200826_create_products_table.sql  20250430072812_create_category_enum_alter_products.sql  20250501110752_create_product_condition_enum.sql  20250501110829_create_product_status_enum.sql  20250501110858_create_category_type_enum.sql  20250501110916_create_products_table.sql  20250505175900_create_user_role_and_user_table.sql  20250505180017_create_user_table.sql  20250506100932_add_timestamps_to_users_table.sql  20250507090114_create_orders_table.sql  20250511142250_create_shopping_cart_tables.down.sql  20250511142250_create_shopping_cart_tables.sql  20250519210536_shopping_carts_updated.sql  20250520090208_update_shopping_carts_for_guest_users.sql  20250523114304_add_product_gender.sql  20250601090503_user_shipping_details.sql  20250601105612_user_table_updated.sql  20250601114621_user_table_updated2.sql  20250601132729_order_update_payment_method.sql  20250601193405_update_products_table.sql  20250603225009_orders_update_payment_method.sql  20250605062351_products_update_on_sale.sql  20250608124340_product_status_updated_new_enum.sql  20250618114630_password_resets.sql  20250703181538_add_user_id_and_indexes_to_products.sql  20250703184811_add_guest_session_id_to_carts.sql  20250703193018_fix_shopping_carts_constraints.sql  20250707113503_add_indexes_for_performance.sql  20250714115211_shopping_carts_fix.sql
src/: auth.rs  auth_models.rs  cart_utils.rs  cloudinary.rs  email_service.rs  errors.rs  extractor.rs  filters.rs  handlers.rs  htmx_handlers.rs  main.rs  middleware.rs  models.rs  pagination.rs  response.rs  seo.rs  services.rs  sitemap_generator.rs  state.rs
static/: app.js  index.html  main-background.avif  main-logo.avif  style.css
templates/: app.js  cart_content.html  gender_category_page.html  index — kopia.html  index.html  product_cart.html  product_detail_view.html  product_grid.html
