[package]
name = "secondhand_shop_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
