[package]
name = "secondhand_shop_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["multipart", "macros"] }
axum-server = { version = "0.7.2", features = ["tokio-rustls", "rustls", "rustls-pemfile", "tls-rustls"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand = "0.9.1"
rustls-pemfile = "2.2.0"
rustls = { version = "0.23.26", features = ["aws-lc-rs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
sha1 = "0.10.6"
hex = "0.4.3"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
futures = "0.3.31"
axum-macros = "0.5.0"
once_cell = "1.21.3"
maud = { version = "0.27.0", features = ["axum"] }
urlencoding = "2.1.3"
resend-rs = "0.15.0"
lol_html = "2.4.0"
aws-lc-rs = "1.13.1"


[profile.release]
opt-level = 3         # Maksymalna optymalizacja (domyślna)
lto = true            # Link Time Optimization
codegen-units = 1     # Lepsza optymalizacja, wolniejsze kompilowanie
panic = "abort"       # Mniejszy rozmiar binarki, brak śladów paniki
strip = true          # Usunięcie symboli debugowania (wymaga nightly albo ręcznie)
